data/all_generated_tests/raw_wast_tests/loop_StackCorruption_338.wast
;; 9. **Test 9**:    - **Description**: Utilize a loop with memory accesses, including `load` and `store` instructions, interspersed within the loop sequence.    - **Constraint**: Proper memory access and stack management within loops.    - **Stack Corruption Check**: Ensure memory operations do not corrupt the stack when interacting within the loop environment.

(assert_invalid
  (module
    (memory 1)
    (func $test
      (loop (result i32)
        (i32.const 0)
        (i32.load)
        (i32.const 1)
        (i32.store)
        (br 0)
      )
    )
  )
  "type mismatch"
)